test/e2e/valid/bufread.mylang
{
    define my_buffer of buffer<int32, 5> = [];
    my_buffer[0] = 42;
    my_buffer[1] = 99;
    define mut x of int32 = my_buffer[0];
    print(x);
}
